--- a/sensor-status-dashboard/package.json
+++ b/sensor-status-dashboard/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "./node_modules/bower/bin install && ./node_modules/node-sass/bin/node-sass --output-style expanded assets/stylesheets/sass/site.scss > assets/stylesheets/css/site.css"
   },
   "author": "",
   "license": "BSD-3-Clause",
